// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docsGen:union should convert union of simple types 1`] = `
{
 "docsGenTypes": {
  "test/test.tsx:TUnionTest": {
   "summary": {
    "module": "test/test.tsx",
    "typeName": {
     "name": "TUnionTest",
     "nameFull": "TUnionTest"
    },
    "src": "test/test.tsx",
    "exported": true
   },
   "details": {
    "kind": 264,
    "typeValue": {
     "raw": "boolean | 'one' | 'two' | 'three' | 'four'",
     "print": [
      "type TUnionTest = 'one' | 'two' | 'three' | 'four' | boolean;"
     ]
    }
   }
  }
 }
}
`;

exports[`docsGen:union should convert union of two anonymous object types 1`] = `
{
 "docsGenTypes": {
  "test/test.tsx:TTest": {
   "summary": {
    "module": "test/test.tsx",
    "typeName": {
     "name": "TTest",
     "nameFull": "TTest"
    },
    "src": "test/test.tsx",
    "exported": true
   },
   "details": {
    "kind": 264,
    "typeValue": {
     "raw": "{ sameProp: string; n1Prop: string; } | { sameProp: string; n2Prop: string; }",
     "print": [
      "type TTest = ({",
      "    sameProp: string;",
      "    n1Prop: string;",
      "}) | ({",
      "    sameProp: string;",
      "    n2Prop: string;",
      "});"
     ]
    },
    "props": [
     {
      "uid": "sameProp",
      "name": "sameProp",
      "typeValue": {
       "raw": "string"
      },
      "editor": {
       "type": "string"
      },
      "required": true
     },
     {
      "uid": "n1Prop",
      "name": "n1Prop",
      "typeValue": {
       "raw": "string"
      },
      "editor": {
       "type": "string"
      },
      "required": true
     },
     {
      "uid": "n2Prop",
      "name": "n2Prop",
      "typeValue": {
       "raw": "string"
      },
      "editor": {
       "type": "string"
      },
      "required": true
     }
    ],
    "propsFromUnion": true
   }
  }
 }
}
`;

exports[`docsGen:union should convert union of two object types 1`] = `
{
 "docsGenTypes": {
  "test/test.tsx:TTest": {
   "summary": {
    "module": "test/test.tsx",
    "typeName": {
     "name": "TTest",
     "nameFull": "TTest"
    },
    "src": "test/test.tsx",
    "exported": true
   },
   "details": {
    "kind": 264,
    "typeValue": {
     "raw": "N1 | N2",
     "print": [
      "type TTest = N1 | N2;"
     ]
    },
    "props": [
     {
      "uid": "sameProp",
      "name": "sameProp",
      "typeValue": {
       "raw": "string"
      },
      "editor": {
       "type": "string"
      },
      "from": "test/test.tsx:N1",
      "required": true
     },
     {
      "uid": "n1Prop",
      "name": "n1Prop",
      "typeValue": {
       "raw": "string"
      },
      "editor": {
       "type": "string"
      },
      "from": "test/test.tsx:N1",
      "required": true
     },
     {
      "uid": "sameProp_2",
      "name": "sameProp",
      "typeValue": {
       "raw": "string"
      },
      "editor": {
       "type": "string"
      },
      "from": "test/test.tsx:N2",
      "required": true
     },
     {
      "uid": "n2Prop",
      "name": "n2Prop",
      "typeValue": {
       "raw": "string"
      },
      "editor": {
       "type": "string"
      },
      "from": "test/test.tsx:N2",
      "required": true
     }
    ],
    "propsFromUnion": true
   }
  },
  "test/test.tsx:N1": {
   "summary": {
    "module": "test/test.tsx",
    "typeName": {
     "name": "N1",
     "nameFull": "N1"
    },
    "src": "test/test.tsx",
    "exported": false
   }
  },
  "test/test.tsx:N2": {
   "summary": {
    "module": "test/test.tsx",
    "typeName": {
     "name": "N2",
     "nameFull": "N2"
    },
    "src": "test/test.tsx",
    "exported": false
   }
  }
 }
}
`;

exports[`docsGen:union should not expand ReactNode type of property 1`] = `
{
 "docsGenTypes": {
  "test/test.tsx:TTestOptional": {
   "summary": {
    "module": "test/test.tsx",
    "typeName": {
     "name": "TTestOptional",
     "nameFull": "TTestOptional"
    },
    "src": "test/test.tsx",
    "exported": true
   },
   "details": {
    "kind": 263,
    "typeValue": {
     "raw": "TTestOptional",
     "print": [
      "interface TTestOptional {",
      "    testProp?: React.ReactNode;",
      "}"
     ]
    },
    "props": [
     {
      "uid": "testProp",
      "name": "testProp",
      "typeValue": {
       "raw": "React.ReactNode"
      },
      "typeValueRef": "@types/react:ReactNode",
      "required": false
     }
    ],
    "propsFromUnion": false
   }
  },
  "test/test.tsx:TTestRequired": {
   "summary": {
    "module": "test/test.tsx",
    "typeName": {
     "name": "TTestRequired",
     "nameFull": "TTestRequired"
    },
    "src": "test/test.tsx",
    "exported": true
   },
   "details": {
    "kind": 263,
    "typeValue": {
     "raw": "TTestRequired",
     "print": [
      "interface TTestRequired {",
      "    testProp: React.ReactNode;",
      "}"
     ]
    },
    "props": [
     {
      "uid": "testProp",
      "name": "testProp",
      "typeValue": {
       "raw": "React.ReactNode"
      },
      "typeValueRef": "@types/react:ReactNode",
      "required": false
     }
    ],
    "propsFromUnion": false
   }
  },
  "@types/react:ReactNode": {
   "summary": {
    "module": "@types/react",
    "typeName": {
     "name": "ReactNode",
     "nameFull": "ReactNode"
    },
    "src": "node_modules/@types/react/index.d.ts",
    "exported": false
   }
  }
 }
}
`;

exports[`docsGen:union should not try to expand props if union contains an external type 1`] = `
{
 "docsGenTypes": {
  "test/test.tsx:TTest": {
   "summary": {
    "module": "test/test.tsx",
    "typeName": {
     "name": "TTest",
     "nameFull": "TTest"
    },
    "src": "test/test.tsx",
    "exported": true
   },
   "details": {
    "kind": 264,
    "typeValue": {
     "raw": "{ a: string; b: string; } | HTMLElement",
     "print": [
      "type TTest = ({",
      "    a: string;",
      "    b: string;",
      "}) | HTMLElement;"
     ]
    }
   }
  }
 }
}
`;
